Modified version to fit 4 x mobo

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include cmsracklayout/racklayout/racklayout.csv
+include cmsracklayout/racklayout/racklayout.csv.example
 include cmsracklayout/racklayout.wsgi
